--- a/frontend/src/pages/tournamentCompetitor/styles.module.css
+++ b/frontend/src/pages/tournamentCompetitor/styles.module.css
@@ -1,3 +1,7 @@
+.mainCard {
+    padding: 1rem;
+}
+
 .characterCard {
     padding: 1rem;
     display: flex;
@@ -8,4 +12,10 @@
 .challengeIcon {
     width: 2rem;
     margin-left: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .mainCard {
+        padding: 1rem 0;
+    }
 }
