--- a/frontend/src/pages/login/style.module.css
+++ b/frontend/src/pages/login/style.module.css
@@ -5,6 +5,7 @@
   height: 100vh;
   width: 100vw;
   background-color: #f8f9fd;
+  overflow-x: hidden;
 }
 
 .loginLogoContainer {
@@ -33,6 +34,7 @@
     border-radius: 1rem;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     position: relative;
     left: -1rem;
 }
@@ -49,7 +51,8 @@
     background-color: #fff;
     box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24);
     border-radius: 1rem;
-    padding: 10rem 4rem 10rem 3rem;
+    width: 60%;
+    padding: 2rem 4rem 2rem 2rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -64,6 +67,7 @@
   }
 
   .loginForm {
-    padding: 10rem 2rem;
+    width: 80%;
+    padding: 5rem 2rem;
   }
 }
