Logo de dragon ball en la appbar

--- a/frontend/src/components/appBar/style.module.css
+++ b/frontend/src/components/appBar/style.module.css
@@ -8,9 +8,10 @@
     margin: auto;
 }
 
-.logoilu {
-    width: 5rem;
-    margin: 0.1rem;
+.logo {
+    width: 10rem;
+    margin-right: 0.5rem;
+    /* margin: 0.1rem; */
 }
 
 .content {
@@ -37,5 +38,10 @@
 
     .nameContainer {
         display: none;
+    }
+
+    .logo {
+        width: 6rem;
+        margin: 0.1rem;
     }
 }
