Ahora se obtiene el personaje correspondiente al nivel de ki del competidor. Se muestra la imagen y el nombre en el frontend

--- a/frontend/src/pages/tournamentCompetitor/styles.module.css
+++ b/frontend/src/pages/tournamentCompetitor/styles.module.css
@@ -14,6 +14,11 @@
     margin-left: 5px;
 }
 
+.characterImg {
+    min-width: 40%;
+    /* width: 40%; */
+}
+
 @media screen and (max-width: 768px) {
     .mainCard {
         padding: 1rem 0;
